@@ -1,5 +1,8 @@
 2004-10-13  Nate Nielsen <nielsen@memberwebs.com>
 	
+	* libseahorse/seahorse-context.c:
+	* libseahorse/seahorse-recipients.c:
+	* src/seahorse-process-multiple.c: Proper use of ngettext
 	* bonobo/Seahorse_PGP_File_Listener.server.in:
 	* bonobo/seahorse-pgp-file-listener.c:
 	* libseahorse/seahorse-libdialogs.h:
